[package]
authors = ["fakelog"]
name = "fastrace-betterstack"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
fastrace = { version = "0.7", features = ["enable"] }
log = "0.4"
reqwest = { version = "0.12", features = ["blocking"] }
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
